--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,12 @@
 </head>
 <h1>That took me a while...</h1>
 <h2>It still does not work... that sucks</h2>
+<h3>yes! now it is working</h3>
+<h3>so does it also sync automatically? that is a good question</h3>
+<h3>suprisingly it is!</h3>
+<h3>nice feature for sure</h3>
+<h3>hi Remi je kut hoer</h3>
 <body>
-
+<h3>Ok well... does it still work?</h3>
 </body>
 </html>
