--- a/site/index.html
+++ b/site/index.html
@@ -12,5 +12,6 @@
 <h3>hi Remi je kut hoer</h3>
 <body>
 <h3>Ok well... does it still work?</h3>
+<section><a href="test.html">Link to test</a></section>
 </body>
 </html>
