--- a/site/pseudoclasses/pseudo-selectors-before.html
+++ b/site/pseudoclasses/pseudo-selectors-before.html
@@ -48,7 +48,7 @@ cursor: pointer;
 </header>
 
 <section>
-  <div>DIV 1</div>
+  <div style="text-align: center;">DIV 1</div>
   <div>DIV 2</div>
   <div>DIV 3</div>
   <div>DIV 4</div>
